# auth_system

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  tox.ini
auth_system/: settings.py  urls.py
auth_system/apps/resources/: apps.py  serializers.py  urls.py  views.py
auth_system/apps/resources/tests/: conftest.py  test_resources.py
auth_system/apps/users/: admin.py  apps.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
auth_system/apps/users/middleware/: session_middleware.py
auth_system/apps/users/migrations/: 0001_initial.py
auth_system/apps/users/tests/: conftest.py  test_user.py
auth_system/fixtures/: initial_data.json
auth_system/locale/ru/LC_MESSAGES/: django.po
