[tool.poetry]
name = "auth-system"
version = "0.1.0"
description = ""
authors = ["safyro <vektorn1212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.10"
drf-spectacular = "^0.28.0"
pillow = "^11.3.0"
redis = "^6.4.0"
pyjwt = "^2.10.1"
bcrypt = "^4.3.0"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"
django-debug-toolbar = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
